--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -110,7 +110,9 @@
     <Compile Include="Helpers\HttpClientExtensions.cs" />
     <Compile Include="Helpers\NewSetupJsonApiServer.cs" />
     <Compile Include="Http\AttributeTests.cs" />
+    <Compile Include="Helpers\ExpressionComparer.cs" />
     <Compile Include="Http\JsonApiMediaTypeFormatterTests.cs" />
+    <Compile Include="Http\QueryFilterExpressionCollectionTests.cs" />
     <Compile Include="Integration\JsonApiMediaTypeFormatterTests.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\CompanyResource.cs" />
