add failing tests for Guid relations

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -118,9 +118,11 @@
     <Compile Include="Models\CompanyResource.cs" />
     <Compile Include="Models\CompanyWithDifferentId.cs" />
     <Compile Include="Models\CompanyWithDifferentIdResource.cs" />
+    <Compile Include="Models\GuidAsRelation.cs" />
     <Compile Include="Models\GuidAsId.cs" />
     <Compile Include="Helpers\ObsoleteSetupJsonApiServer.cs" />
     <Compile Include="Helpers\Paths.cs" />
+    <Compile Include="Models\PersonWithGuidAsRelationsResource.cs" />
     <Compile Include="Models\PersonResource.cs" />
     <Compile Include="Models\PersonWithDefaultIdResource.cs" />
     <Compile Include="Models\PersonWithDifferentId.cs" />
