Test for included resource relationship URLs

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -119,10 +119,15 @@
     <Compile Include="Models\CompanyResource.cs" />
     <Compile Include="Models\CompanyWithDifferentId.cs" />
     <Compile Include="Models\CompanyWithDifferentIdResource.cs" />
+    <Compile Include="Models\CompanyWithCustomers.cs" />
+    <Compile Include="Models\CompanyWithCustomersResource.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\CustomerResource.cs" />
     <Compile Include="Models\GuidAsRelation.cs" />
     <Compile Include="Models\GuidAsId.cs" />
     <Compile Include="Helpers\ObsoleteSetupJsonApiServer.cs" />
     <Compile Include="Helpers\Paths.cs" />
+    <Compile Include="Models\PersonWithCompanyWithCustomersResource.cs" />
     <Compile Include="Models\PersonWithGuidAsRelationsResource.cs" />
     <Compile Include="Models\PersonResource.cs" />
     <Compile Include="Models\PersonWithDefaultIdResource.cs" />
