--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -85,6 +85,9 @@
     <Compile Include="Queries\Filtering\FilteringProperty.cs" />
     <Compile Include="Http\QueryFilterExpressionCollection.cs" />
     <Compile Include="Queries\Filtering\TypeCorrectingVisitor.cs" />
+    <Compile Include="Queries\Including\IncludingContext.cs" />
+    <Compile Include="Queries\Including\IncludingInterpreter.cs" />
+    <Compile Include="Queries\Including\IncludingProperty.cs" />
     <Compile Include="Queries\Lambda.cs" />
     <Compile Include="Queries\Query.cs" />
     <Compile Include="Queries\QueryContext.cs" />
