--- a/Saule/packages.config
+++ b/Saule/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Humanizer" version="1.37.7" targetFramework="net452" />
+  <package id="Humanizer.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
-  <package id="StyleCop.Analyzers" version="1.0.0-beta015" targetFramework="net452" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
 </packages>
