--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -66,7 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiResource.cs" />
-    <Compile Include="ConfigureFormattersEnum.cs" />
+    <Compile Include="FormatterPriority.cs" />
     <Compile Include="Http\DisableDefaultIncludedAttribute.cs" />
     <Compile Include="Http\AllowsQueryAttribute.cs" />
     <Compile Include="Http\HttpConfigExtensions.cs" />
