--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
 repository: joukevandermaas/saule
 markdown: kramdown
 highlighter: rouge
+baseurl: /saule
 kramdown:
   input: GFM
   hard_wrap: false
