Changes for joukevandermaas/saule#120 to provide end user already parsed JsonApi parameters so we can make custom handling for them in the action.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Helpers\ObsoleteSetupJsonApiServer.cs" />
     <Compile Include="Helpers\Paths.cs" />
     <Compile Include="Models\LazyPerson.cs" />
+    <Compile Include="Models\PersonFilter.cs" />
     <Compile Include="Models\PersonJobOnlyRelatedLinksResource.cs" />
     <Compile Include="Models\PersonJobOnlySelfLinksResource.cs" />
     <Compile Include="Models\PersonNoJobLinksResource.cs" />
