--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -64,9 +64,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiResource.cs" />
+    <Compile Include="Http\AllowsManuallyHandledQueryAttribute.cs" />
+    <Compile Include="Http\JsonApiQueryValueProvider.cs" />
+    <Compile Include="Http\JsonApiQueryValueProviderFactory.cs" />
     <Compile Include="JsonApiSerializerOfT.cs" />
     <Compile Include="StringDictionaryExtensions.cs" />
-    <Compile Include="FormatterPriority.cs" />    <Compile Include="Http\DisableDefaultIncludedAttribute.cs" />
+    <Compile Include="FormatterPriority.cs" />
+    <Compile Include="Http\DisableDefaultIncludedAttribute.cs" />
     <Compile Include="Http\AllowsQueryAttribute.cs" />
     <Compile Include="Http\HttpConfigExtensions.cs" />
     <Compile Include="Http\JsonApiConfiguration.cs" />
