--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -161,8 +161,8 @@
     </Compile>
     <Compile Include="Helpers\NotOrderedQueryable.cs" />
     <Compile Include="Queries\PaginationInterpreterTests.cs" />
-    <Compile Include="Queries\FilteringInterpreterTests.cs" />
-    <Compile Include="Queries\SortingInterpreterTests.cs" />
+    <Compile Include="Queries\FilterInterpreterTests.cs" />
+    <Compile Include="Queries\SortInterpreterTests.cs" />
     <Compile Include="Queries\PaginationQueryTests.cs" />
     <Compile Include="Serialization\CanonicalUrlPathBuilderTests.cs" />
     <Compile Include="Serialization\DefaultUrlPathBuilderTests.cs" />
